update page dekorasi toko

--- a/code/SELLER/dekorasi_toko.html
+++ b/code/SELLER/dekorasi_toko.html
@@ -403,27 +403,136 @@
         </div>
         <div class="content-container">
             <div class="card-container-seller">
-                <div class="row mt-4 tabcontent" id="first">
-                    <img src="../../assets/SELLER/IMAGE/IMAGE SELLER6.jpg" class="w-100-px" alt="">
-                    asdsa
-                </div>
-                <div class="row mt-4 tabcontent" id="two">
-                    aaaa
-                </div>
-                <div class="row mt-4">
-                    <div class="col-12">
-                        <div class="frame-tab-home">
-                            <div id="owl-seller" class="owl-carousel owl-theme">
-                                <div class="item">
-                                    <img src="../../assets/SELLER/IMAGE/IMAGE SELLER6.jpg" class="w-100-px" onclick="tab(event,'first')" alt="">
-                                </div>
-                                <div class="item">
-                                    <img src="../../assets/SELLER/IMAGE/IMAGE SELLER6.jpg" class="w-100-px" onclick="tab(event,'two')" alt="">
+                <div class="card">
+                    <div class="card-body">
+                        <b class="f-16">Pilih tampilan tokomu</b><br>
+                        <p class="f-10 fc-text">Ingin tokomu menarik perhatian banyak pembeli? Yuk, kreasikan tampilan toko sesuai kebutuhan bisnismu.</p>
+                        <div class="row">
+                            <div class="col-md-12">
+                                <button class="btn-prev" id="prev-product" style="left: 3%;"><span class="fa fa-arrow-left"></span></button>
+                                <button class="btn-next" id="next-product" style="right: 3%;"><span class="fa fa-arrow-right"></span></button>
+                                <div class="preview-detail slide-product tab-content">
+                                    <div class="tab-pane slide active" id="pop-1">
+                                        <div class="row">
+                                            <div class="col-md-6">
+                                                <img class="item-photo detail-photo-product"
+                                                    src="../../assets/SELLER/IMAGE/IMAGE SELLER6.jpg" />
+                                            </div>
+                                            <div class="col-md-6 text-left">
+                                                <h2 class="text-dark"><b>Simple Layout</b></h2>
+                                                <p class="fc-text">
+                                                    Tampilan minimalis agar pembeli mudah mencari produkmu. Cocok untuk yang baru mulai membuka toko.
+                                                </p>
+                                                <div>
+                                                    <button class="btn-white f-10 fw-bold rounded-10">Lihat Tampilan</button>
+                                                    <button class="btn btn-success ml-2 rounded-10">Gunakan</button>
+                                                </div>
+                                            </div>
+                                        </div>
+                                    </div>
+                                    <div class="tab-pane slide" id="pop-2">
+                                        <div class="row">
+                                            <div class="col-md-6">
+                                                <img class="item-photo detail-photo-product"
+                                                    src="../../assets/SELLER/IMAGE/IMAGE SELLER6.jpg" />
+                                            </div>
+                                            <div class="col-md-6 text-left">
+                                                <h2 class="text-dark"><b>Simple Layout Two</b></h2>
+                                                <p class="fc-text">
+                                                    Tampilan minimalis agar pembeli mudah mencari produkmu. Cocok untuk yang baru mulai membuka toko.
+                                                </p>
+                                                <div>
+                                                    <button class="btn-white f-10 fw-bold rounded-10">Lihat Tampilan</button>
+                                                    <button class="btn btn-success ml-2 rounded-10">Gunakan</button>
+                                                </div>
+                                            </div>
+                                        </div>
+                                    </div>
+                                    <div class="tab-pane slide" id="pop-3">
+                                        <div class="row">
+                                            <div class="col-md-6">
+                                                <img class="item-photo detail-photo-product"
+                                                    src="../../assets/SELLER/IMAGE/IMAGE SELLER6.jpg" />
+                                            </div>
+                                            <div class="col-md-6 text-left">
+                                                <h2 class="text-dark"><b>Simple Layout 3</b></h2>
+                                                <p class="fc-text">
+                                                    Tampilan minimalis agar pembeli mudah mencari produkmu. Cocok untuk yang baru mulai membuka toko.
+                                                </p>
+                                                <div>
+                                                    <button class="btn-white f-10 fw-bold rounded-10">Lihat Tampilan</button>
+                                                    <button class="btn btn-success ml-2 rounded-10">Gunakan</button>
+                                                </div>
+                                            </div>
+                                        </div>
+                                    </div>
+                                    <div class="tab-pane slide" id="pop-4">
+                                        <div class="row">
+                                            <div class="col-md-6">
+                                                <img class="item-photo detail-photo-product"
+                                                    src="../../assets/SELLER/IMAGE/IMAGE SELLER6.jpg" />
+                                            </div>
+                                            <div class="col-md-6 text-left">
+                                                <h2 class="text-dark"><b>Simple Layout 4</b></h2>
+                                                <p class="fc-text">
+                                                    Tampilan minimalis agar pembeli mudah mencari produkmu. Cocok untuk yang baru mulai membuka toko.
+                                                </p>
+                                                <div>
+                                                    <button class="btn-white f-10 fw-bold rounded-10">Lihat Tampilan</button>
+                                                    <button class="btn btn-success ml-2 rounded-10">Gunakan</button>
+                                                </div>
+                                            </div>
+                                        </div>
+                                    </div>
+                                    <div class="tab-pane slide" id="pop-5">
+                                        <div class="row">
+                                            <div class="col-md-6">
+                                                <img class="item-photo detail-photo-product"
+                                                    src="../../assets/SELLER/IMAGE/IMAGE SELLER6.jpg" />
+                                            </div>
+                                            <div class="col-md-6 text-left">
+                                                <h2 class="text-dark"><b>Simple Layout 5</b></h2>
+                                                <p class="fc-text">
+                                                    Tampilan minimalis agar pembeli mudah mencari produkmu. Cocok untuk yang baru mulai membuka toko.
+                                                </p>
+                                                <div>
+                                                    <button class="btn-white f-10 fw-bold rounded-10">Lihat Tampilan</button>
+                                                    <button class="btn btn-success ml-2 rounded-10">Gunakan</button>
+                                                </div>
+                                            </div>
+                                        </div>
+                                    </div>
                                 </div>
                             </div>
+                            <div class="col-md-12">
+                                <div class="preview-thumbnail-detail thumb-slider nav nav-tabs tumb-preview-detail" style="height: auto;">
+                                    <a class="active w-20-persen p-2" data-target="#pop-1" data-mdb-toggle="tab" href="#pop-1"
+                                            role="tab">
+                                            <img src="../../assets/SELLER/IMAGE/IMAGE SELLER8.jpg" class="m-auto"/>
+                                    </a>
+                                    <a class="w-20-persen p-2" data-target="#pop-2" data-toggle="tab" data-mdb-toggle="tab" href="#pop-2"
+                                            role="tab">
+                                            <img src="../../assets/SELLER/IMAGE/IMAGE SELLER8.jpg" class="m-auto"/>
+                                    </a>
+                                    <a class="w-20-persen p-2" data-target="#pop-3" data-toggle="tab" data-mdb-toggle="tab" href="#pop-3"
+                                            role="tab">
+                                            <img src="../../assets/SELLER/IMAGE/IMAGE SELLER8.jpg" class="m-auto"/>
+                                    </a>
+                                    <a class="w-20-persen p-2" data-target="#pop-4" data-toggle="tab" data-mdb-toggle="tab" href="#pop-4"
+                                            role="tab">
+                                            <img src="../../assets/SELLER/IMAGE/IMAGE SELLER8.jpg" class="m-auto"/>
+                                    </a>
+                                    <a class="w-20-persen p-2" data-target="#pop-5" data-toggle="tab" data-mdb-toggle="tab" href="#pop-5"
+                                            role="tab">
+                                            <img src="../../assets/SELLER/IMAGE/IMAGE SELLER8.jpg" class="m-auto"/>
+                                    </a>
+                                </div>
+                            </div>
+                            
                         </div>
                     </div>
                 </div>
+                
             </div>
         </div>
     </div>
@@ -436,5 +545,6 @@
     <script src="../../assets/plugins/owl.carousel/dist/owl.carousel.js"></script>
     <script src="../../assets/plugins/slick/slick/slick.js"></script>
     <script src="../../assets/js/custom.js"></script>
+    <script src="../../assets/js/slider.js"></script>
 </body>
 </html>
