update page dekorasi toko

--- a/code/SELLER/dekorasi_toko.html
+++ b/code/SELLER/dekorasi_toko.html
@@ -411,14 +411,14 @@
                             <div class="col-md-12">
                                 <button class="btn-prev" id="prev-product" style="left: 3%;"><span class="fa fa-arrow-left"></span></button>
                                 <button class="btn-next" id="next-product" style="right: 3%;"><span class="fa fa-arrow-right"></span></button>
-                                <div class="preview-detail slide-product tab-content">
+                                <div class="preview-detail slide-product tab-content" style="height: 300px;">
                                     <div class="tab-pane slide active" id="pop-1">
                                         <div class="row">
                                             <div class="col-md-6">
                                                 <img class="item-photo detail-photo-product"
                                                     src="../../assets/SELLER/IMAGE/IMAGE SELLER6.jpg" />
                                             </div>
-                                            <div class="col-md-6 text-left">
+                                            <div class="col-md-5 my-auto text-left">
                                                 <h2 class="text-dark"><b>Simple Layout</b></h2>
                                                 <p class="fc-text">
                                                     Tampilan minimalis agar pembeli mudah mencari produkmu. Cocok untuk yang baru mulai membuka toko.
@@ -436,7 +436,7 @@
                                                 <img class="item-photo detail-photo-product"
                                                     src="../../assets/SELLER/IMAGE/IMAGE SELLER6.jpg" />
                                             </div>
-                                            <div class="col-md-6 text-left">
+                                            <div class="col-md-5 my-auto text-left">
                                                 <h2 class="text-dark"><b>Simple Layout Two</b></h2>
                                                 <p class="fc-text">
                                                     Tampilan minimalis agar pembeli mudah mencari produkmu. Cocok untuk yang baru mulai membuka toko.
@@ -454,7 +454,7 @@
                                                 <img class="item-photo detail-photo-product"
                                                     src="../../assets/SELLER/IMAGE/IMAGE SELLER6.jpg" />
                                             </div>
-                                            <div class="col-md-6 text-left">
+                                            <div class="col-md-5 my-auto text-left">
                                                 <h2 class="text-dark"><b>Simple Layout 3</b></h2>
                                                 <p class="fc-text">
                                                     Tampilan minimalis agar pembeli mudah mencari produkmu. Cocok untuk yang baru mulai membuka toko.
@@ -472,7 +472,7 @@
                                                 <img class="item-photo detail-photo-product"
                                                     src="../../assets/SELLER/IMAGE/IMAGE SELLER6.jpg" />
                                             </div>
-                                            <div class="col-md-6 text-left">
+                                            <div class="col-md-5 my-auto text-left">
                                                 <h2 class="text-dark"><b>Simple Layout 4</b></h2>
                                                 <p class="fc-text">
                                                     Tampilan minimalis agar pembeli mudah mencari produkmu. Cocok untuk yang baru mulai membuka toko.
@@ -490,7 +490,7 @@
                                                 <img class="item-photo detail-photo-product"
                                                     src="../../assets/SELLER/IMAGE/IMAGE SELLER6.jpg" />
                                             </div>
-                                            <div class="col-md-6 text-left">
+                                            <div class="col-md-5 my-auto text-left">
                                                 <h2 class="text-dark"><b>Simple Layout 5</b></h2>
                                                 <p class="fc-text">
                                                     Tampilan minimalis agar pembeli mudah mencari produkmu. Cocok untuk yang baru mulai membuka toko.
