update btn file

--- a/code/profil.html
+++ b/code/profil.html
@@ -533,8 +533,9 @@
                                                     </div>
                                                     <div
                                                         class="col-12 d-flex justify-content-center align-items-center">
-                                                        <button class="btn btn-block shadow-0 btn-choose-photo"
-                                                            type="button"><b>Pilih Foto</b></button>
+                                                        <label class="btn btn-block shadow-0 btn-choose-photo" for="browse">Pilih Foto</label>
+                                                        <input type="file" id="browse" name="browse" style="display: none">
+                                                        
                                                     </div>
                                                     <div class="col-12 profile-photo-info f-9">
                                                         <p class="text-muted fw-sm">Besar file maksimum 10.000.000 bytes
